// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`containers/users/UserDetail renders detail page correctly with delete button 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <ErrorBoundary>
    <UserDetail
      fetchUser={[Function]}
      match={
        Object {
          "params": Object {
            "id": "7",
          },
        }
      }
      noTitle={[Function]}
      userById={
        Object {
          "attributes": Object {
            "amount_earned": "0 KES",
            "approval_rate": 0,
            "approved_submissions": 1,
            "avg_amount_earned": 0,
            "avg_approval_rate": 0,
            "avg_approved_submissions": 0,
            "avg_rejected_submissions": 0,
            "avg_submissions": 0,
            "created": "2018-06-19T16:03:10.184043+03:00",
            "email": "sol@admin.me",
            "expertise": "1",
            "first_name": "Davis",
            "gender": "1",
            "last_login": "2018-06-19T16:03:22+03:00",
            "last_name": "Raymond",
            "modified": "2018-06-20T08:45:12.976916+03:00",
            "national_id": null,
            "ona_pk": null,
            "ona_username": "davisraym",
            "payment_number": "",
            "phone_number": "",
            "rejected_submissions": 0,
            "role": "1",
            "role_display": "Admin",
            "submission_count": 5,
          },
          "id": "1",
          "type": "UserProfile",
        }
      }
    >
      <center>
        <div
          className="lds-ripple"
        >
          <div />
          <div />
        </div>
      </center>
    </UserDetail>
  </ErrorBoundary>
</Router>
`;

exports[`containers/users/UserDetail renders detail page correctly without delete button 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <ErrorBoundary>
    <UserDetail
      fetchUser={[Function]}
      match={
        Object {
          "params": Object {
            "id": "1",
          },
        }
      }
      noTitle={[Function]}
      userById={
        Object {
          "attributes": Object {
            "amount_earned": "0 KES",
            "approval_rate": 0,
            "approved_submissions": 1,
            "avg_amount_earned": 0,
            "avg_approval_rate": 0,
            "avg_approved_submissions": 0,
            "avg_rejected_submissions": 0,
            "avg_submissions": 0,
            "created": "2018-06-19T16:03:10.184043+03:00",
            "email": "sol@admin.me",
            "expertise": "1",
            "first_name": "Davis",
            "gender": "1",
            "last_login": "2018-06-19T16:03:22+03:00",
            "last_name": "Raymond",
            "modified": "2018-06-20T08:45:12.976916+03:00",
            "national_id": null,
            "ona_pk": null,
            "ona_username": "davisraym",
            "payment_number": "",
            "phone_number": "",
            "rejected_submissions": 0,
            "role": "1",
            "role_display": "Admin",
            "submission_count": 5,
          },
          "id": "1",
          "type": "UserProfile",
        }
      }
    >
      <center>
        <div
          className="lds-ripple"
        >
          <div />
          <div />
        </div>
      </center>
    </UserDetail>
  </ErrorBoundary>
</Router>
`;
